Replace beta node affiliation labels with GA ones

--- a/deploy/memcache-dep.yaml
+++ b/deploy/memcache-dep.yaml
@@ -17,7 +17,7 @@ spec:
         name: memcached
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       containers:
       - name: memcached
         image: memcached:1.5.20
